--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsTodoApp</title>
+    <title>Just do it</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="app">
+      <header>
+        <h1><span>Just do it</span></h1>
+      </header>
+      
+      <%= yield %>
+
+    </div>
   </body>
 </html>
