--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
       <header>
         <h1><span>Just do it</span></h1>
       </header>
+
+      <% flash.each do |message_type, message| %>
+          <%= content_tag(:div, message, class: "#{message_type}") %>
+      <% end %>
       
       <%= yield %>
 
