--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :title %>
-  <%= f.text_field :title, id: 'project-title' %>
+  <%= f.text_field :title, class: 'project-title' %>
 
   <%= f.submit "Create Project", class: "btn addProject" %>
 <% end %>
