--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,6 +15,10 @@ html {
   color: var($black);
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
   @include button;
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 /*
