--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,7 @@
 <li class="project" id="project-<%= project.id %>">
   <h1 class="project-title"><%= project.title %></h1>
-  <span class="close-project">x</span>
+  <span class="close-project">
+    <%= link_to "x", project, method: :delete,
+                            data: { confirm: "You sure?" } %>
+  </span>
 </li>
