--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,6 +2,6 @@
   <%= f.label :title %>
   <%= f.text_field :title, class: 'project-title' %>
 
-  <%= f.submit "Create Project", class: "btn addProject" %>
+  <%= f.submit "Create Project", class: "btn add-project" %>
   <%= render 'shared/error_messages', object: f.object %>
 <% end %>
