--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
+<% provide(:button_text, 'Add Task') %>
+<% provide(:path,  tasks_path ) %>
+
 <section class="project-section">
   <ul class="list" id="projects-list">
     <%= render @project %>
