change todo to nested resource of project

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:button_text, 'Add Task') %>
-<% provide(:path,  tasks_path ) %>
+<% provide(:path,  project_tasks_path(@project) ) %>
 
 <section class="project-section">
   <ul class="list" id="projects-list">
