adds navigationn links

--- a/app/assets/stylesheets/_button.scss
+++ b/app/assets/stylesheets/_button.scss
@@ -9,6 +9,7 @@
     border-radius: 0.25rem;
     display: inline-block;
     cursor: pointer;
+    font-size: 13px;
     font-weight: bold;
     padding: 6px 16px;
     margin-top: 5px;
