--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,9 +7,14 @@
   </ul>
 </section>
 
+<%= link_to 'Back', projects_path, class: "btn" %>
+
 <section id="tasks-section">
   <%= render 'tasks/form' %>
   <ul class="list" id="tasks-list">
-    <%= render @tasks %>
+    <%= render @unfinished_tasks %>
+  </ul>
+  <ul class="list" id="completed-tasks-list">
+    <%= render @finished_tasks %>
   </ul>
 </section>
