--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,3 @@
-<% provide(:title, 'Edit Task') %>
 <% provide(:button_text, 'Update Task') %>
 <% provide(:path,  project_task_path(@project, @task) ) %>
 
@@ -6,3 +5,5 @@
 
 <%= link_to 'Delete Task', project_task_path(@project, @task), method: :delete,
  data: { confirm: "Are you sure?" }, class: "delete-task-link btn"%>
+
+<%= link_to 'Back', project_path(@project), class: "btn" %>
